# homework_28_1

./: README.md  manage.py  pyproject.toml
ads/: urls.py
ads/fixtures/: categories.json  users.json
ads/migrations/: 0001_initial.py  0002_ad_author_id_ad_category_id.py  0003_rename_author_id_ad_author_and_more.py
ads/models/: ad.py  category.py
ads/views/: ad.py  category.py
data/: category.csv  csv_to_json.py  user.csv
homework_28_1/: asgi.py  settings.py  urls.py  wsgi.py
pg_data/base/13455/: 1247  1249  1259  16384  16386  16391  16392  16394  16396  16399  16401  16403  16405  16408  16410  16415  16417  16419  16424  16426  16428  16431  16433  16435  16440  16442  16449  16456  16457  16458  16470  16471  16472  16485  16486  16487  16499  16501  16503  16509  (+58 more)
pg_data/global/: pg_control  pg_internal.init
pg_data/pg_stat/: db_0.stat  db_13455.stat  global.stat
pg_data/pg_xact/: 0000
users/: urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_location_id.py  0003_rename_location_id_user_location.py
